M-0 adding to .gitignore