@@ -1,8 +1,9 @@
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
 	<modelVersion>4.0.0</modelVersion>
 
 	<artifactId>massive-mailer-front</artifactId>
-	<packaging>jar</packaging>
+	<packaging>war</packaging>
 
 	<parent>
 		<groupId>com.icetea.mailer</groupId>
@@ -15,13 +16,13 @@
 
 	<dependencies>
 		<dependency>
-			<groupId>com.fidias.database.modeler.fidias-dd</groupId>
-			<artifactId>fidias-dd-api</artifactId>
+			<groupId>com.icetea.mailer</groupId>
+			<artifactId>massive-mailer-api</artifactId>
 			<version>1.0.0-SNAPSHOT</version>
 		</dependency>
 		<dependency>
-			<groupId>com.fidias.database.modeler.fidias-dd</groupId>
-			<artifactId>fidias-dd-domain</artifactId>
+			<groupId>com.icetea.mailer</groupId>
+			<artifactId>massive-mailer-domain</artifactId>
 			<version>1.0.0-SNAPSHOT</version>
 		</dependency>
 		<dependency>
@@ -31,6 +32,11 @@
 		<dependency>
 			<groupId>org.freemarker</groupId>
 			<artifactId>freemarker</artifactId>
+		</dependency>
+		<!-- Tiles -->
+		<dependency>
+			<groupId>org.apache.tiles</groupId>
+			<artifactId>tiles-jsp</artifactId>
 		</dependency>
 		<dependency>
 			<groupId>org.springframework</groupId>
@@ -48,6 +54,11 @@
 			<groupId>javax.servlet</groupId>
 			<artifactId>jstl</artifactId>
 			<version>${jstl.version}</version>
+			<scope>provider</scope>
+		</dependency>
+		<dependency>
+			<groupId>javax.servlet</groupId>
+			<artifactId>jsp-api</artifactId>
 		</dependency>
 		<!-- LogBack dependencies -->
 		<dependency>
@@ -61,18 +72,6 @@
 		<dependency>
 			<groupId>junit</groupId>
 			<artifactId>junit</artifactId>
-		</dependency>
-		<dependency>
-			<groupId>com.despegar.library</groupId>
-			<artifactId>routing</artifactId>
-		</dependency>
-		<dependency>
-			<groupId>com.despegar.library</groupId>
-			<artifactId>version</artifactId>
-		</dependency>
-		<dependency>
-			<groupId>com.despegar.library</groupId>
-			<artifactId>logging</artifactId>
 		</dependency>
 		<dependency>
 			<groupId>com.google.guava</groupId>
@@ -89,10 +88,6 @@
 		<dependency>
 			<groupId>org.codehaus.jackson</groupId>
 			<artifactId>jackson-mapper-asl</artifactId>
-		</dependency>
-		<dependency>
-			<groupId>javax.inject</groupId>
-			<artifactId>javax.inject</artifactId>
 		</dependency>
 		<dependency>
 			<groupId>javax.inject</groupId>
@@ -119,23 +114,6 @@
 			<groupId>org.easytesting</groupId>
 			<artifactId>fest-assert</artifactId>
 		</dependency>
-		<!-- JETTY -->
-		<dependency>
-			<groupId>org.eclipse.jetty</groupId>
-			<artifactId>jetty-server</artifactId>
-		</dependency>
-		<dependency>
-			<groupId>org.eclipse.jetty</groupId>
-			<artifactId>jetty-servlet</artifactId>
-		</dependency>
-		<dependency>
-			<groupId>org.eclipse.jetty</groupId>
-			<artifactId>jetty-servlets</artifactId>
-		</dependency>
-		<dependency>
-			<groupId>org.mortbay.jetty</groupId>
-			<artifactId>servlet-api-2.5</artifactId>
-		</dependency>
 		<dependency>
 			<groupId>com.mangofactory</groupId>
 			<artifactId>swagger-springmvc</artifactId>
@@ -149,122 +127,29 @@
 	<build>
 		<plugins>
 			<plugin>
-				<groupId>com.despegar.deploys</groupId>
-				<artifactId>cloudia-java-plugin</artifactId>
-				<version>0.0.9</version>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-war-plugin</artifactId>
+				<version>2.4</version>
+				<configuration>
+					<warName>fidias-dd-web</warName>
+				</configuration>
+			</plugin>
+			<plugin>
+				<groupId>org.apache.tomcat.maven</groupId>
+				<artifactId>tomcat7-maven-plugin</artifactId>
+				<version>2.0</version>
 				<executions>
 					<execution>
-						<id>prod</id>
-						<phase>package</phase>
+						<id>tomcat-run</id>
 						<goals>
-							<goal>tar</goal>
+							<goal>exec-war-only</goal>
 						</goals>
-						<configuration>
-							<mainClass>com.despegar.ankaa.myo.globals.Global</mainClass>
-							<applicationArguments>9290 prod</applicationArguments>
-							<jvmArguments>
-								-XX:MaxTenuringThreshold=15 -XX:SurvivorRatio=8
-								-XX:NewSize=3G -XX:MaxNewSize=3G -Xms5G
-								-Xmx5G
-								-XX:MaxPermSize=384m -XX:+UseConcMarkSweepGC -verbose:gc
-								-XX:+PrintGCTimeStamps -Xloggc:./logs/garbageCollector.log
-								-XX:+PrintGCDateStamps -XX:+CMSClassUnloadingEnabled
-								-XX:+CMSPermGenSweepingEnabled -Duser.timezone=GMT
-							</jvmArguments>
-							<environment>prod</environment>
-							<newrelicName>cfa-myo</newrelicName>
-							<newrelicKey>d474d9a3f38e23d7436ba6130403cc8245d0cb37</newrelicKey>
-							<healthCheckURI>/cfa-myo/service/version</healthCheckURI>
-							<healthCheckTimeout>240</healthCheckTimeout>
-						</configuration>
-					</execution>
-					<execution>
-						<id>beta</id>
 						<phase>package</phase>
-						<goals>
-							<goal>tar</goal>
-						</goals>
 						<configuration>
-							<mainClass>com.despegar.ankaa.myo.globals.Global</mainClass>
-							<applicationArguments>9290 beta</applicationArguments>
-							<jvmArguments>-XX:MaxTenuringThreshold=15 -XX:SurvivorRatio=8
-								-XX:NewSize=1G -XX:MaxNewSize=1G -Xms3G -Xmx3G
-								-XX:MaxPermSize=384m -XX:+UseConcMarkSweepGC -verbose:gc
-								-XX:+PrintGCTimeStamps -Xloggc:./logs/garbageCollector.log
-								-XX:+PrintGCDateStamps -XX:+CMSClassUnloadingEnabled
-								-XX:+CMSPermGenSweepingEnabled -Duser.timezone=GMT</jvmArguments>
-							<environment>beta</environment>
-							<newrelicName>cfa-myo-beta</newrelicName>
-							<newrelicKey>f3d7c40606dba94c83eb5bc93232a1ea8afaeb4d</newrelicKey>
-							<healthCheckURI>/cfa-myo-beta/service/version</healthCheckURI>
-							<healthCheckTimeout>240</healthCheckTimeout>
-						</configuration>
-					</execution>
-					<execution>
-						<id>rc</id>
-						<phase>package</phase>
-						<goals>
-							<goal>tar</goal>
-						</goals>
-						<configuration>
-							<mainClass>com.despegar.ankaa.myo.globals.Global</mainClass>
-							<applicationArguments>9290 rc</applicationArguments>
-							<jvmArguments>-XX:MaxTenuringThreshold=15 -XX:SurvivorRatio=8
-								-XX:NewSize=1G -XX:MaxNewSize=1G -Xms3G -Xmx3G
-								-XX:MaxPermSize=384m -XX:+UseConcMarkSweepGC -verbose:gc
-								-XX:+PrintGCTimeStamps -Xloggc:./logs/garbageCollector.log
-								-XX:+PrintGCDateStamps -XX:+CMSClassUnloadingEnabled
-								-XX:+CMSPermGenSweepingEnabled -Duser.timezone=GMT</jvmArguments>
-							<environment>rc</environment>
-							<newrelicName>cfa-myo-rc</newrelicName>
-							<newrelicKey>f3d7c40606dba94c83eb5bc93232a1ea8afaeb4d</newrelicKey>
-							<healthCheckURI>/cfa-myo-rc/service/version</healthCheckURI>
-							<healthCheckTimeout>240</healthCheckTimeout>
-						</configuration>
-					</execution>
-					<execution>
-						<id>bkp</id>
-						<phase>package</phase>
-						<goals>
-							<goal>tar</goal>
-						</goals>
-						<configuration>
-							<mainClass>com.despegar.ankaa.myo.globals.Global</mainClass>
-							<applicationArguments>9290 bkp</applicationArguments>
-							<jvmArguments>-XX:MaxTenuringThreshold=15 -XX:SurvivorRatio=8
-								-XX:NewSize=1G -XX:MaxNewSize=1G -Xms3G -Xmx3G
-								-XX:MaxPermSize=384m -XX:+UseConcMarkSweepGC -verbose:gc
-								-XX:+PrintGCTimeStamps -Xloggc:./logs/garbageCollector.log
-								-XX:+PrintGCDateStamps -XX:+CMSClassUnloadingEnabled
-								-XX:+CMSPermGenSweepingEnabled -Duser.timezone=GMT</jvmArguments>
-							<environment>bkp</environment>
-							<newrelicName>cfa-myo-bkp</newrelicName>
-							<newrelicKey>f3d7c40606dba94c83eb5bc93232a1ea8afaeb4d</newrelicKey>
-							<healthCheckURI>/cfa-myo-bkp/service/version</healthCheckURI>
-							<healthCheckTimeout>240</healthCheckTimeout>
-						</configuration>
-					</execution>
-					<execution>
-						<id>ic</id>
-						<phase>package</phase>
-						<goals>
-							<goal>tar</goal>
-						</goals>
-						<configuration>
-							<mainClass>com.despegar.ankaa.myo.globals.Global</mainClass>
-							<applicationArguments>9290</applicationArguments>
-							<jvmArguments>
-								-Dnewrelic.environment=despdevcro
-								-Duser.timezone=GMT
-							</jvmArguments>
-							<environment>ic</environment>
-							<newrelicName>cfa-myo</newrelicName>
-							<newrelicKey>1957fbd5dedf4741df48e1f2bc4eed1b60d2d686</newrelicKey>
-							<healthCheckURI>/cfa-myo/service/version</healthCheckURI>
-							<healthCheckTimeout>240</healthCheckTimeout>
-							<!-- <suspendURI>/cfa-myo/manage/suspend/OIWEOIWEUROWIAAAAA/CloudDeploy</suspendURI> -->
-							<!-- <resumeURI>/cfa-myo/manage/resume/OIWEOIWEUROWIAAAAA</resumeURI> -->
-							<!-- <statusURI>/cfa-myo/manage/status</statusURI> -->
+							<path>/massive-mailer</path>
+							<enableNaming>false</enableNaming>
+							<finalName>massive-mailer.jar</finalName>
+							<charset>utf-8</charset>
 						</configuration>
 					</execution>
 				</executions>
